# fuel-tests

./: Cargo.toml  Forc.toml
src/: counter.sw  main.sw
tests/: harness.rs  test_counter.rs
