[package]
name = "testy"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Varun Doshi <doshivarun202@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = {version = "0.65.1", features = ["fuel-core-lib"] }
# fuels = "0.66.0"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
